saas/k8s/003-data/100-minio/50-service.yml
apiVersion: v1
kind: Service
metadata:
  # This name uniquely identifies the service
  name: minio-service
  namespace: data
  labels:
    app: minio
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    # Looks for labels  in the namespace and applies the spec
    app: minio
