saas/k8s/003-data/100-minio/60-service-headles.yml
apiVersion: v1
kind: Service
metadata:
  # This name uniquely identifies the service
  name: minio-service-headless
  namespace: data
spec:
  clusterIP: None
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    # Looks for labels  in the namespace and applies the spec
    app: minio
  sessionAffinity: None
  type: ClusterIP
