saas/k8s/003-data/100-minio/70-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: data
  labels:
    app: minio
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  rules:
    - host: minio.data.davar.com
      http:
        paths:
          - backend:
              serviceName: minio-service
              servicePort: 9000
            path: /
  tls:
    - hosts:
        - minio.data.davar.com
      secretName: minio-production-tls
